--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -545,7 +545,7 @@ section {
 .resume .resume-item h5 {
   font-size: 16px;
   background: #f7f8f9;
-  padding: 5px 15px;
+  /* padding: 5px 15px; */
   display: inline-block;
   font-weight: 600;
   margin-bottom: 10px;
