--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 a {
-  color: #0563bb;
+  color: #b20000;
   text-decoration: none;
 }
 
@@ -40,7 +40,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #0563bb;
+  background: #b20000;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -82,7 +82,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #0563bb;
+  border: 6px solid #b20000;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -208,7 +208,7 @@ h6 {
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
   color: #fff;
-  background: #0563bb;
+  background: #b20000;
 }
 
 .nav-menu a:hover span,
@@ -262,7 +262,7 @@ h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #0563bb;
+  background-color: #b20000;
 }
 
 /*--------------------------------------------------------------
@@ -308,7 +308,7 @@ h6 {
 }
 
 #hero p span {
-  color: #0563bb;
+  color: #b20000;
   letter-spacing: 1px;
 }
 
@@ -326,7 +326,7 @@ h6 {
 }
 
 #hero .social-links a:hover {
-  color: #0563bb;
+  color: #b20000;
 }
 
 @media (max-width: 992px) {
@@ -386,7 +386,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #0563bb;
+  background: #b20000;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -428,7 +428,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #0563bb;
+  color: #b20000;
   line-height: 0;
 }
 
@@ -454,7 +454,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 24px;
-  background: #0563bb;
+  background: #b20000;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -511,7 +511,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #0563bb;
+  background-color: #b20000;
 }
 
 /*--------------------------------------------------------------
@@ -528,7 +528,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #0563bb;
+  border-left: 2px solid #b20000;
   position: relative;
 }
 
@@ -538,7 +538,7 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #0563bb;
+  color: #b20000;
   margin-bottom: 10px;
 }
 
@@ -572,7 +572,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #0563bb;
+  border: 2px solid #b20000;
 }
 
 /*--------------------------------------------------------------
@@ -607,7 +607,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #0563bb;
+  color: #b20000;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -753,11 +753,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #b20000;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #b20000;
 }
 
 .portfolio-details .portfolio-info {
@@ -1000,11 +1000,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #0563bb;
+  border: 1px solid #b20000;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #0563bb;
+  background-color: #b20000;
 }
 
 @media (min-width: 992px) {
@@ -1023,7 +1023,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #0563bb;
+  color: #b20000;
   float: left;
   width: 44px;
   height: 44px;
@@ -1061,7 +1061,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #0563bb;
+  background: #b20000;
   color: #fff;
 }
 
@@ -1131,7 +1131,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #0563bb;
+  background: #b20000;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1190,7 +1190,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #0563bb;
+  background: #b20000;
   color: #fff;
   line-height: 22px;
   padding: 8px 0;
